# ChangeLog for vmware overlay
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  02 Jul 2006; Mike Auty <ikelos@gentoo.org>:
  Fixed a mistake in the vmware-mod.eclass, where I'd left out the EPATCH_SUFFIX.
  It didn't show itself because I was always building the modules for the running
  kernel.  And that why you have other people bugtest for you...  5:)
  
  29 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Added the required files for the vmware-overlay to work as a Paludis
  overlay.  Make note: new files are one thing, deviations that will break
  the ebuild with portage are another...  5:)
  
  27 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Changed the vmware-server ebuild to make use of ${config_dir}.
  It should also now start applying the amd64 pam.d patch correctly again.
  
  27 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Finally remove the old vmware-modules-101 ebuild, since it's not
  required by any packages in the tree anymore.  I hope to remove the
  vmware-pkg.eclass soon (I can't even remember which version of server
  made use of it, but if that ever gets unmerged, vmware-pkg still needs
  to be there).

  Once all that's done, we should probably move not-vmware-src-install
  over to vmware-src-install (and alias not-vmware-src-install to avoid
  breakages).  After that, there's a few fix-ups (symlinks, desktop icons)
  that need doing.  We're getting closer though, so it might be time
  to start adding ~x86 to some of the workstation/player builds, to get
  some people testing them... 5:)
  
  25 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Pushed out the latest builds for vmware-server/server-console (27828).
  
  23 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Altered the vmware.eclass to create a VMWARE_GROUP for console products too.

  19 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Comment out a line in the eclass that was breaking vmware-server when