@@ -1,0 +1,12 @@
+DIST vmware-any-any-update101.tar.gz 296409 RMD160 d8994b91492257d8b8e08480ab27fc307fc34095 SHA1 43714052429c1574cdf086a052859657affff0b0 SHA256 b12e3a70117ef26a85c8e01a23ea7d21b62bbc86998368114f9f7932390d2037
+EBUILD vmware-server-tools-1.0.0.ebuild 2137 RMD160 4b24f5da2ac45eefb079d930c5eb87f1c05824f3 SHA1 0393e1ff1c21fe4be5d033c9a2e24d48b0e13657 SHA256 c7709f37a5f3730ea29e67ebcfd81b55df512413421b065de8e624338d3fe02b
+MD5 8c47518a5ff06498087f55be8bd931db vmware-server-tools-1.0.0.ebuild 2137
+RMD160 4b24f5da2ac45eefb079d930c5eb87f1c05824f3 vmware-server-tools-1.0.0.ebuild 2137
+SHA256 c7709f37a5f3730ea29e67ebcfd81b55df512413421b065de8e624338d3fe02b vmware-server-tools-1.0.0.ebuild 2137
+MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
+MD5 7cc95faad4185e8ed375248bc73a17fc metadata.xml 159
+RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 metadata.xml 159
+SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215 metadata.xml 159
+MD5 ba6f4b9f12358a7d5fd4d2aa7a7df366 files/digest-vmware-server-tools-1.0.0 274
+RMD160 dde69d8dc0b4f3d9a670d3a1fcf4dfaf797d8b2c files/digest-vmware-server-tools-1.0.0 274
+SHA256 0709bc0650eae2c2976c42f497ff0d5736bfa00de85d6c8c1c21173e38de5ff1 files/digest-vmware-server-tools-1.0.0 274
