@@ -2,6 +2,12 @@
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  08 Jul 2006; Mike Auty <ikelos@gentoo.org>:
+  First attempt at a vmware-server-tools package, based on a user submitted ebuild
+  (thanks to Anthony Red in bug 122670) and the vmware-workstation-tools ebuild.
+  There are likely to be a lot of changes to it, whilst I work out what it does,
+  during that time I'd suggest NOT using it...  5:)
+
   02 Jul 2006; Mike Auty <ikelos@gentoo.org>:
   Fixed a mistake in the vmware-mod.eclass, where I'd left out the EPATCH_SUFFIX.
   It didn't show itself because I was always building the modules for the running
